fix overflow

--- a/css/main-style.css
+++ b/css/main-style.css
@@ -21,7 +21,7 @@
   align-items: center;
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
+  overflow-x: hidden;
   position: relative;
   background-color: var(--desaturated-dark-blue-key-background);
 }
@@ -42,7 +42,6 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 8%;
 }
 
 .main-container__header__theme-container {
@@ -102,7 +101,6 @@
 }
 
 .main-container__result-section {
-  height: 15%;
   width: 100%;
   background-color: var(--very-dark-desaturated-blue-background);
   text-align: right;
@@ -116,7 +114,7 @@
 
 .main-container__keys {
   width: 100%;
-  height: 60%;
+  height: 65%;
   background-color: var(--very-dark-desatutated-blue-toggle);
   padding: 1rem;
   overflow: hidden;
@@ -137,16 +135,22 @@
   font-weight: bolder;
   background-color: var(--grayish-orange-key-shadow);
   padding-bottom: 5px;
+  max-height: 85px;
+  max-width: 85px;
 }
 
 .main-container__keys__button-container-reset {
   grid-column: span 2;
   background-color: var(--very-dark-desaturated-blue-main);
+  max-width: none;
+  max-height: none;
 }
 
 .main-container__keys__button-container-equal {
   grid-column: span 2;
   background-color: var(--dark-red-key-shadow);
+  max-width: none;
+  max-height: none;
 }
 
 .main-container__keys__button-container-delete {
